--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn22.70:2.7": "So verstehe ich die ausführliche Bedeutung dieser kurzen Aussage des Buddha.“ ",
   "sn22.70:3.1": "„Gut, gut, Mönch! ",
   "sn22.70:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
-  "sn22.70:3.3": "Form steckt im Erregenden fest – du solltest das Verlangen nach ihr aufgeben. "
+  "sn22.70:3.3": "Form steckt im Erregenden fest – du solltest das Verlangen nach ihr aufgeben. ",
+  "sn22.70:3.4": "Gefühl steckt im Erregenden fest … "
 }
