--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.70_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn22.70:3.1": "„Gut, gut, Mönch! ",
   "sn22.70:3.2": "Es ist gut, dass du die ausführliche Bedeutung meiner kurzen Aussage so verstehst. ",
   "sn22.70:3.3": "Form steckt im Erregenden fest – du solltest das Verlangen nach ihr aufgeben. ",
-  "sn22.70:3.4": "Gefühl steckt im Erregenden fest … "
+  "sn22.70:3.4": "Gefühl steckt im Erregenden fest … ",
+  "sn22.70:3.5": "Wahrnehmung steckt im Erregenden fest … "
 }
