--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1542,7 +1542,7 @@
   "pli-tv-kd9:7.20.100": "“The Buddha was at Campā, ",
   "pli-tv-kd9:7.20.101": "The account of the village of Vāsabha; ",
   "pli-tv-kd9:7.20.102": "Helping the newly arrived, ",
-  "pli-tv-kd9:7.20.103": "He made it desirable. ",
+  "pli-tv-kd9:7.20.103": "He worked for what they wanted. ",
   "pli-tv-kd9:7.20.104": "Knowing, ʻThey are knowledgeableʼ, ",
   "pli-tv-kd9:7.20.105": "He made no effort then; ",
   "pli-tv-kd9:7.20.106": "Ejected, ʻHe did notʼ, ",
