--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1641,7 +1641,7 @@
   "pli-tv-kd9:7.20.199": "And sentenced, elephantiasis. ",
   "pli-tv-kd9:7.20.200": "Serious, abnormal, and blind in one eye, ",
   "pli-tv-kd9:7.20.201": "Crooked limb, lame, and also the paralyzed; ",
-  "pli-tv-kd9:7.20.202": "Drippled, weak, ",
+  "pli-tv-kd9:7.20.202": "Crippled, weak, ",
   "pli-tv-kd9:7.20.203": "Blind, and mute, deaf. ",
   "pli-tv-kd9:7.20.204": "Blind and mute, blind and deaf, ",
   "pli-tv-kd9:7.20.205": "Mute and deaf; ",
