--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1702,9 +1702,9 @@
   "pli-tv-kd9:7.20.260": "With regard to the procedures that have a method, ",
   "pli-tv-kd9:7.20.261": "A wise one should determine condemnation; ",
   "pli-tv-kd9:7.20.262": "For those who act suitably, ",
-  "pli-tv-kd9:7.20.263": "He conducts himself properly, he should ask. ",
-  "pli-tv-kd9:7.20.264": "Lifting of those procedures, ",
-  "pli-tv-kd9:7.20.265": "And below with the method for procedures; ",
+  "pli-tv-kd9:7.20.263": "One who conducts himself properly, he should ask. ",
+  "pli-tv-kd9:7.20.264": "The lifting of those procedures, ",
+  "pli-tv-kd9:7.20.265": "And in accordance with the method for the procedure as above; ",
   "pli-tv-kd9:7.20.266": "In regard to whichever procedure, ",
   "pli-tv-kd9:7.20.267": "And there they dispute. ",
   "pli-tv-kd9:7.20.268": "Invalid, and just badly done, ",
