--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd9_translation-en-brahmali.json
@@ -1709,7 +1709,7 @@
   "pli-tv-kd9:7.20.267": "And there they dispute. ",
   "pli-tv-kd9:7.20.268": "Invalid, and just badly done, ",
   "pli-tv-kd9:7.20.269": "And to be done again; ",
-  "pli-tv-kd9:7.20.270": "And also the lifting of the procedures, ",
+  "pli-tv-kd9:7.20.270": "And also for the lifting of procedures, ",
   "pli-tv-kd9:7.20.271": "Those monks speak in accordance with the Teaching. ",
   "pli-tv-kd9:7.20.272": "Having seen those afflicted by the disease of failure, ",
   "pli-tv-kd9:7.20.273": "To those who are ready for the legal procedure; ",
