--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -16,7 +16,7 @@
   "pli-tv-kd11:1.2.2": "“How can the monks Paṇḍuka and Lohitaka act like this?” ",
   "pli-tv-kd11:1.2.9": "They told the Buddha. ",
   "pli-tv-kd11:1.2.10": "Soon afterwards the Buddha had the Sangha gathered and questioned the monks: ",
-  "pli-tv-kd11:1.2.11": "“Is it true that the monks Paṇḍuka and Lohitaka are acting like this?” ",
+  "pli-tv-kd11:1.2.11": "“Is it true, monks, that the monks Paṇḍuka and Lohitaka are acting like this?” ",
   "pli-tv-kd11:1.2.18": "“It’s true, Sir.” ",
   "pli-tv-kd11:1.2.19": "The Buddha rebuked them, ",
   "pli-tv-kd11:1.2.20": "“It’s not suitable for those foolish men, it’s not proper, it’s not worthy of a monastic, it’s not allowable, it’s not to be done. ",
