--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -27,7 +27,7 @@
   "pli-tv-kd11:1.3.1": "The Buddha then spoke in many ways in dispraise of being difficult to support and maintain, in dispraise of great desires, discontent, socializing, and laziness; but he spoke in many ways in praise of being easy to support and maintain, of fewness of wishes, contentment, self-effacement, ascetic practices, serenity, reduction in things, and being energetic. After giving a teaching on what is right and proper, he addressed the monks: ",
   "pli-tv-kd11:1.3.2": "“Well then, monks, the Sangha should do a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:1.4.1": "And this is how it should be done. ",
-  "pli-tv-kd11:1.4.2": "First you should accuse the monks Paṇḍuka and Lohitaka. They should then be reminded of what they have done, before they are charged with an offense. A competent and capable monk should then inform the Sangha: ",
+  "pli-tv-kd11:1.4.2": "First you should accuse the monks Paṇḍuka and Lohitaka. They should then be reminded of what they’ve done, before they’re charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:1.4.3": "‘Please, Venerables, I ask the Sangha to listen. ",
   "pli-tv-kd11:1.4.4": "These monks Paṇḍuka and Lohitaka are quarrelsome, argumentative, and creators of legal issues in the Sangha. They go to other monks who are also quarrelsome, argumentative, and creators of legal issues in the Sangha, and they say to them, ",
   "pli-tv-kd11:1.4.5": "“Don’t let him beat you. ",
