--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -80,7 +80,7 @@
   "pli-tv-kd11:1.4.52": "Any monk who approves of doing a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka should remain silent. ",
   "pli-tv-kd11:1.4.53": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:1.4.54": "The Sangha has done a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
-  "pli-tv-kd11:1.4.55": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd11:1.4.55": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:2.1.0": "1.1 The group of twelve on illegitimate legal procedures ",
   "pli-tv-kd11:2.1.1": "“Monks, when a legal procedure of condemnation has three qualities, it is illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:2.1.2": "it is done in the absence of the accused, it is done without questioning the accused, it is done without the admission of the accused. ",
