--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -82,10 +82,10 @@
   "pli-tv-kd11:1.4.54": "The Sangha has done a legal procedure of condemnation against the monks Paṇḍuka and Lohitaka. ",
   "pli-tv-kd11:1.4.55": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:2.1.0": "1.1 The group of twelve on illegitimate legal procedures ",
-  "pli-tv-kd11:2.1.1": "“Monks, when a legal procedure of condemnation has three qualities, it is illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:2.1.2": "it is done in the absence of the accused, it is done without questioning the accused, it is done without the admission of the accused. ",
-  "pli-tv-kd11:2.1.4": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:2.1.5": "it is done against one who hasn’t committed any offense, it is done against one who has committed an offense that isn’t clearable by confession, it is done against one who has confessed their offense. ",
+  "pli-tv-kd11:2.1.1": "“When a legal procedure of condemnation has three qualities, it’s illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:2.1.2": "it’s done in the absence of the accused, it’s done without questioning the accused, it’s done without the admission of the accused. ",
+  "pli-tv-kd11:2.1.4": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:2.1.5": "it’s done against one who hasn’t committed any offense, it’s done against one who’s committed an offense that isn’t clearable by confession, it’s done against one who’s confessed their offense. ",
   "pli-tv-kd11:2.1.7": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:2.1.8": "it is done without having accused the person of their offense, it is done without having reminded the person of their offense, it is done without having charged the person with their offense. ",
   "pli-tv-kd11:2.1.10": "“When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
