--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -92,11 +92,11 @@
   "pli-tv-kd11:2.1.11": "it’s done in the absence of the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
   "pli-tv-kd11:2.1.13": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:2.1.14": "it’s done without questioning the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
-  "pli-tv-kd11:2.1.16": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:2.1.17": "it is done without the admission of the accused, it is done illegitimately, it is done by an incomplete assembly. ",
-  "pli-tv-kd11:2.1.19": "“When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
-  "pli-tv-kd11:2.1.20": "it is done against one who hasn’t committed any offense, it is done illegitimately, it is done by an incomplete assembly. ",
-  "pli-tv-kd11:2.1.22": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
+  "pli-tv-kd11:2.1.16": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:2.1.17": "it’s done without the admission of the accused, it’s done illegitimately, it’s done by an incomplete assembly. ",
+  "pli-tv-kd11:2.1.19": "“When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
+  "pli-tv-kd11:2.1.20": "it’s done against one who hasn’t committed any offense, it’s done illegitimately, it’s done by an incomplete assembly. ",
+  "pli-tv-kd11:2.1.22": "When a procedure of condemnation has another three qualities, it’s also illegitimate, contrary to the Monastic Law, and improperly disposed of: ",
   "pli-tv-kd11:2.1.23": "it is done against one who has committed an offense that isn’t clearable by confession, it is done illegitimately, it is done by an incomplete assembly. ",
   "pli-tv-kd11:2.1.25": "When a procedure of condemnation has another three qualities, it is also illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:2.1.26": "it is done against one who has confessed their offense, it is done illegitimately, it is done by an incomplete assembly. ",
