--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -541,8 +541,8 @@
   "pli-tv-kd11:14.1.15": "When a procedure of banishment has another three qualities, it is also illegitimate, contrary to the Monastic Law, and improperly disposed of: it’s done without having charged the person with their offense, it’s done illegitimately, it’s done by an incomplete assembly.” ",
   "pli-tv-kd11:14.1.17": "The group of twelve on illegitimate legal procedures is finished. ",
   "pli-tv-kd11:14.1.18.0": "3.2 The group of twelve on legitimate legal procedures ",
-  "pli-tv-kd11:14.1.18.1": "“When a legal procedure of banishment has three qualities, it is legitimate, in accordance with the Monastic Law, and properly resolved: ",
-  "pli-tv-kd11:14.1.19": "it is done in the presence of the accused, it is done with the questioning of the accused, it is done with the admission of the accused. ",
+  "pli-tv-kd11:14.1.18.1": "“When a legal procedure of banishment has three qualities, it is legitimate, in accordance with the Monastic Law, and properly disposed of: ",
+  "pli-tv-kd11:14.1.19": "it’s done in the presence of the accused, it’s done with the questioning of the accused, it’s done with the admission of the accused. ",
   "pli-tv-kd11:14.1.21": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: ",
   "pli-tv-kd11:14.1.22": "it is done against one who has committed an offense, it is done against one who has committed an offense that is clearable by confession, it is done against one who hasn’t confessed their offense. ",
   "pli-tv-kd11:14.1.23": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done after having accused the person of their offense, it is done after having reminded the person of their offense, it is done after having charged the person with their offense. ",
