--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -553,12 +553,12 @@
   "pli-tv-kd11:14.1.28": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done against one who’s committed an offense that’s clearable by confession, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:14.1.29": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done against one who hasn’t confessed their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
   "pli-tv-kd11:14.1.30": "“When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after accusing the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
-  "pli-tv-kd11:14.1.31": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done after having reminded the person of their offense, it is done legitimately, it is done by a unanimous assembly. ",
-  "pli-tv-kd11:14.1.32": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly resolved: it is done after having charged the person with their offense, it is done legitimately, it is done by a unanimous assembly.” ",
+  "pli-tv-kd11:14.1.31": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after reminding the person of their offense, it’s done legitimately, it’s done by a unanimous assembly. ",
+  "pli-tv-kd11:14.1.32": "When a procedure of banishment has another three qualities, it is also legitimate, in accordance with the Monastic Law, and properly disposed of: it’s done after charging the person with their offense, it’s done legitimately, it’s done by a unanimous assembly.” ",
   "pli-tv-kd11:14.1.34": "The group of twelve on legitimate legal procedures is finished. ",
   "pli-tv-kd11:14.1.35.0": "3.3 The group of fourteen on wishing ",
   "pli-tv-kd11:14.1.35.1": "“When a monk has three qualities, the Sangha may, if it wishes, do a legal procedure of banishing him: ",
-  "pli-tv-kd11:14.1.36": "he is quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
+  "pli-tv-kd11:14.1.36": "he’s quarrelsome, argumentative, and a creator of legal issues in the Sangha; ",
   "pli-tv-kd11:14.1.37": "he is ignorant and incompetent, often committing offenses, lacking in boundaries; ",
   "pli-tv-kd11:14.1.38": "he is constantly and improperly socializing with householders. ",
   "pli-tv-kd11:14.1.40": "When a monk has another three qualities, the Sangha may, if it wishes, do a procedure of banishing him: ",
