--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -672,7 +672,7 @@
   "pli-tv-kd11:17.2.15": "Any monk who approves of lifting the legal procedure of banishing monk so-and-so should remain silent. ",
   "pli-tv-kd11:17.2.16": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:17.2.17": "The Sangha has lifted the legal procedure of banishing monk so-and-so. ",
-  "pli-tv-kd11:17.2.18": "The Sangha approves and is therefore silent. I will remember it thus.’” ",
+  "pli-tv-kd11:17.2.18": "The Sangha approves and is therefore silent. I’ll remember it thus.’” ",
   "pli-tv-kd11:17.2.19": "The second section on the legal procedure of banishment is finished. ",
   "pli-tv-kd11:18.1.0": "4. The legal procedure of reconciliation ",
   "pli-tv-kd11:18.1.1": "At one time Venerable Sudhamma was the resident monk at the householder Citta’s monastery at Macchikāsaṇḍa. He was in charge of the building work and received a regular supply of food. ",
