--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -738,12 +738,12 @@
   "pli-tv-kd11:18.6.1": "And it should be done like this. ",
   "pli-tv-kd11:18.6.2": "First you should accuse the monk Sudhamma. He should then be reminded of what he has done, before he’s charged with an offense. A competent and capable monk should then inform the Sangha: ",
   "pli-tv-kd11:18.6.3": "‘Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:18.6.4": "The monk Sudhamma has demeaned and insulted the householder Citta, who has faith and confidence, who is a donor, benefactor, and supporter of the Sangha. ",
+  "pli-tv-kd11:18.6.4": "The monk Sudhamma has demeaned and insulted the householder Citta, who has faith and confidence, who’s a donor, benefactor, and supporter of the Sangha. ",
   "pli-tv-kd11:18.6.5": "If it seems appropriate to the Sangha, the Sangha should do a legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:18.6.6": "instructing him to ask Citta for forgiveness. ",
   "pli-tv-kd11:18.6.7": "This is the motion. ",
   "pli-tv-kd11:18.6.8": "Please, Venerables, I ask the Sangha to listen. ",
-  "pli-tv-kd11:18.6.9": "The monk Sudhamma has demeaned and insulted the householder Citta, who has faith and confidence, who is a donor, benefactor, and supporter of the Sangha. ",
+  "pli-tv-kd11:18.6.9": "The monk Sudhamma has demeaned and insulted the householder Citta, who has faith and confidence, who’s a donor, benefactor, and supporter of the Sangha. ",
   "pli-tv-kd11:18.6.10": "The Sangha is doing a legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:18.6.11": "instructing him to ask Citta for forgiveness. ",
   "pli-tv-kd11:18.6.12": "Any monk who approves of doing a legal procedure of reconciliation against the monk Sudhamma, instructing him to ask Citta for forgiveness, should remain silent. ",
