--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd11_translation-en-brahmali.json
@@ -758,7 +758,7 @@
   "pli-tv-kd11:18.6.21": "Any monk who doesn’t approve should speak up. ",
   "pli-tv-kd11:18.6.22": "The Sangha has done the legal procedure of reconciliation against the monk Sudhamma, ",
   "pli-tv-kd11:18.6.23": "instructing him to ask Citta for forgiveness. ",
-  "pli-tv-kd11:18.6.24": "The Sangha approves and is therefore silent. I will remember it thus.’ ",
+  "pli-tv-kd11:18.6.24": "The Sangha approves and is therefore silent. I’ll remember it thus.’ ",
   "pli-tv-kd11:19.1.0": "4.1 The group of twelve on illegitimate legal procedures ",
   "pli-tv-kd11:19.1.1": "“When a legal procedure of reconciliation has three qualities, it is illegitimate, contrary to the Monastic Law, and not properly resolved: ",
   "pli-tv-kd11:19.1.2": "it is done in the absence of the accused, it is done without questioning the accused, it is done without the admission of the accused. ",
