--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -338,5 +338,6 @@
   "dn2:45.15": "Jis susilaiko nuo įsivėlimo į pavedimų ir žinučių siuntinėjimus.",
   "dn2:45.16": "Jis susilaiko nuo pirkimo ir pardavimo.",
   "dn2:45.17": "Jis susilaiko nuo apgaudinėjimo (neteisingu) svoriu, pinigais ir kiekiu.",
-  "dn2:45.18": "Jis susilaiko nuo neteisėtumo, apgaulių, apgavysčių, nesąžiningumo."
+  "dn2:45.18": "Jis susilaiko nuo neteisėtumo, apgaulių, apgavysčių, nesąžiningumo.",
+  "dn2:45.19": "Jis susilaiko nuo naikinimo, žudymo, supančiojimo, užpuolimo, smurto."
 }
