--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -778,7 +778,7 @@
   "sn-name:1088.sn35.104": "Geborgenheit ",
   "sn-name:1097.sn35.113": "Mithören ",
   "sn-name:1098.sn35-lokakamagunavagga": "Das Kapitel über die Welt und die Arten von Sinnesreizen ",
-  "sn-name:1109.sn35-gahapativagga": "Das Kapitel über Hausbesitzer ",
+  "sn-name:1109.sn35-gahapativagga": "Das Kapitel mit Hausbesitzern ",
   "sn-name:1120.sn35-devadahavagga": "Das Kapitel bei Devadaha ",
   "sn-name:1121.sn35.134": "Bei Devadaha ",
   "sn-name:1133.sn35-navapuranavagga": "Das Kapitel über das Alte und das Neue ",
