--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "sn35.132:0.1": "Verbundene Lehrreden 35.132 ",
-  "sn35.132:0.2": "13. Das Kapitel mit Hausbesitzern "
+  "sn35.132:0.2": "13. Das Kapitel mit Hausbesitzern ",
+  "sn35.132:0.3": "Mit Lohicca "
 }
