--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "sn35.132:0.1": "Verbundene Lehrreden 35.132 ",
   "sn35.132:0.2": "13. Das Kapitel mit Hausbesitzern ",
   "sn35.132:0.3": "Mit Lohicca ",
-  "sn35.132:1.1": "Einmal hielt sich der Ehrwürdige Mahākaccāna im Land der Avantier auf, in einer Hütte in der Wildnis bei Makkarakaṭa. "
+  "sn35.132:1.1": "Einmal hielt sich der Ehrwürdige Mahākaccāna im Land der Avantier auf, in einer Hütte in der Wildnis bei Makkarakaṭa. ",
+  "sn35.132:1.2": "Da kamen einige junge Schüler des Brahmanen Lohicca, als sie Feuerholz sammelten, in die Nähe von Mahākaccānas Hütte. Sie zogen und streiften um die Hütte herum, machten einen Höllenlärm und spotteten auf vielerlei Art: "
 }
