--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn35.132:0.2": "13. Das Kapitel mit Hausbesitzern ",
   "sn35.132:0.3": "Mit Lohicca ",
   "sn35.132:1.1": "Einmal hielt sich der Ehrwürdige Mahākaccāna im Land der Avantier auf, in einer Hütte in der Wildnis bei Makkarakaṭa. ",
-  "sn35.132:1.2": "Da kamen einige junge Schüler des Brahmanen Lohicca, als sie Feuerholz sammelten, in die Nähe von Mahākaccānas Hütte. Sie zogen und streiften um die Hütte herum, machten einen Höllenlärm und spotteten auf vielerlei Art: "
+  "sn35.132:1.2": "Da kamen einige junge Schüler des Brahmanen Lohicca, als sie Feuerholz sammelten, in die Nähe von Mahākaccānas Hütte. Sie zogen und streiften um die Hütte herum, machten einen Höllenlärm und spotteten auf vielerlei Art: ",
+  "sn35.132:1.3": "„Diese Glatzköpfe, diese falschen Asketen, dieses Gesindel, diese schwarze Ausgeburt aus den Füßen unseres Stammvaters! Sie werden geehrt, geachtet, gewürdigt und verehrt von denen, die angeblich die vedische Kultur geerbt haben.“ "
 }
