--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -7,5 +7,6 @@
   "sn35.132:1.3": "„Diese Glatzköpfe, diese falschen Asketen, dieses Gesindel, diese schwarze Ausgeburt aus den Füßen unseres Stammvaters! Sie werden geehrt, geachtet, gewürdigt und verehrt von denen, die vorgeben, Erben der vedischen Kultur zu sein.“ ",
   "sn35.132:1.4": "Da kam Mahākaccāna aus seiner Hütte und sagte zu diesen Brahmanenschülern: ",
   "sn35.132:1.5": "„Schüler, macht nicht so einen Lärm. ",
-  "sn35.132:1.6": "Ich werde zu euch über die Lehre sprechen.“ "
+  "sn35.132:1.6": "Ich werde zu euch über die Lehre sprechen.“ ",
+  "sn35.132:1.7": "Und die Brahmanenschüler verstummten. "
 }
