--- a/translation/de/sabbamitta/sutta/an/an4/an4.123_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.123_translation-de-sabbamitta.json
@@ -6,7 +6,7 @@
   "an4.123:1.2": "Welche vier? ",
   "an4.123:1.3": "Zunächst tritt jemand, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; da gibt es die Ekstase und die Seligkeit der Abgeschiedenheit, während man den Geist ausrichtet und hält. ",
   "an4.123:1.4": "Man genießt diese Übung, sie gefällt einem, man findet sie befriedigend. ",
-  "an4.123:1.5": "Wenn sie sich an sie hält, sich ihr verschreibt, häufig so meditiert und darin nicht nachlässt, so wird sie, wenn sie stirbt, unter den Göttern aus Brahmās Gefolge wiedergeboren. ",
+  "an4.123:1.5": "Wenn man sich an sie hält, sich ihr verschreibt, häufig so meditiert und darin nicht nachlässt, so wird man, wenn man stirbt, unter den Göttern aus Brahmās Gefolge wiedergeboren. ",
   "an4.123:1.6": "Die Lebensdauer der Götter aus Brahmās Gefolge beträgt ein Äon. ",
   "an4.123:1.7": "Ein gewöhnlicher Mensch bleibt dort, solange die Lebenszeit währt, und geht dann in die Hölle, ins Tierreich oder ins Gespensterreich. ",
   "an4.123:1.8": "Doch ein Schüler des Buddha bleibt dort, solange die Lebenszeit währt, und erlischt in jenem Leben. ",
