--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn35.132:1.7": "Und die Brahmanenschüler verstummten. ",
   "sn35.132:1.8": "Da sagte Mahākaccāna ihnen diese Strophen auf: ",
   "sn35.132:2.1": "„Die Brahmanen von einst setzten Sittlichkeit an die erste Stelle ",
-  "sn35.132:2.2": "und erinnerten sich an die alten Bräuche. "
+  "sn35.132:2.2": "und erinnerten sich an die alten Bräuche. ",
+  "sn35.132:2.3": "Die Tore ihrer Sinne waren gut bewacht "
 }
