--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -15,5 +15,5 @@
   "sn35.132:2.3": "Die Tore ihrer Sinne waren gut bewacht ",
   "sn35.132:2.4": "und sie hatten den Zorn gemeistert. ",
   "sn35.132:3.1": "Diese Brahmanen, die sich an die alten Bräuche erinnerten, ",
-  "sn35.132:3.2": "genossen die Tugend und die Vertiefung. "
+  "sn35.132:3.2": "fanden Vergnügen in Grundsätzen und in der Vertiefung. "
 }
