--- a/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/dn/dn2_translation-lt-piyadassi.json
@@ -347,5 +347,5 @@
   "dn2:46.3": "Tai irgi yra jo dorovė. ",
   "dn2:47.1": "Tuomet, kai vieni gerbiami atsiskyrėliai ir brahmanai suvalgę maistą, duotą (jiems) iš tikėjimo, gyvena mėgaudamiesi prikauptu turtu –",
   "dn2:47.2": "t.y. prikauptu maistu, prikauptais gėrimais, prikauptais drabužiais, prikauptomis transporto priemonėmis, prikauptais patalais, prikauptais kvepalais, prikauptomis gerybėmis –",
-  "dn2:47.3": "jis susilaiko nuo mėgovimosi prikauptu turtu."
+  "dn2:47.3": "jis susilaiko nuo mėgavimosi prikauptu turtu."
 }
