--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -16,5 +16,6 @@
   "sn35.132:2.4": "und sie hatten den Zorn gemeistert. ",
   "sn35.132:3.1": "Diese Brahmanen, die sich an die alten Bräuche erinnerten, ",
   "sn35.132:3.2": "fanden Vergnügen in Grundsätzen und in der Vertiefung. ",
-  "sn35.132:4.1": "Aber diese sind vom Weg abgekommen. Angeblich sagen sie auf, "
+  "sn35.132:4.1": "Aber diese sind vom Weg abgekommen. Angeblich sagen sie auf, ",
+  "sn35.132:4.2": "doch sie leben unausgewogen und bewerten Menschen nach ihrem Stamm. "
 }
