--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -17,5 +17,6 @@
   "sn35.132:3.1": "Diese Brahmanen, die sich an die alten Bräuche erinnerten, ",
   "sn35.132:3.2": "fanden Vergnügen in Grundsätzen und in der Vertiefung. ",
   "sn35.132:4.1": "Aber diese sind vom Weg abgekommen. Angeblich sagen sie auf, ",
-  "sn35.132:4.2": "doch sie leben unausgewogen und bewerten Menschen nach ihrem Stamm. "
+  "sn35.132:4.2": "doch sie leben unausgewogen und bewerten Menschen nach ihrem Stamm. ",
+  "sn35.132:4.3": "Vom Zorn beherrscht, greifen sie nach vielen Waffen, "
 }
