--- a/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn35/sn35.132_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "sn35.132:4.1": "Aber diese sind vom Weg abgekommen. Angeblich sagen sie auf, ",
   "sn35.132:4.2": "doch sie leben unausgewogen und bewerten Menschen nach ihrem Stamm. ",
   "sn35.132:4.3": "Vom Zorn beherrscht, greifen sie nach vielen Waffen, ",
-  "sn35.132:4.4": "greifen Starke und Schwache an. "
+  "sn35.132:4.4": "greifen Starke und Schwache an. ",
+  "sn35.132:5.1": "Für jemanden, der die Tore der Sinne nicht bewacht, ist alles umsonst, "
 }
